--- a/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
+++ b/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
@@ -138,8 +138,12 @@
                     </div>
                 </aura:if>
                 <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
-                    <div class="label"><abbr title="required"
-                                             class="slds-required">*</abbr>{!$Label.c.PG_AP_F_Referred_By}</div>
+                    <div class="label">
+                        <aura:if isTrue="{!!v.updateMode}">
+                            <abbr title="required"
+                                  class="slds-required">*</abbr>
+                        </aura:if>
+                        {!$Label.c.PG_AP_F_Referred_By}</div>
                     <c:rrSelect options="{!v.formData.referredByLVList}" value="{!v.pe.Referred_By__c}"
                                 placeholder="{!$Label.c.PG_AC_Select}" required="true" useSentenceFont="false"/>
                 </div>
