Batch classes for Email Notification (854)
Batch classes, test class, labels, email templates, custom metadata

--- a/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
@@ -27,6 +27,10 @@
                 <behavior>Edit</behavior>
                 <field>Shareback_Settings_on_StudySites__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Logged_Out_Days_Notification__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
