--- a/force-app/main/default/aura/RRSearchAbstract/RRSearchAbstract.cmp
+++ b/force-app/main/default/aura/RRSearchAbstract/RRSearchAbstract.cmp
@@ -140,7 +140,9 @@
                             </aura:iteration>
                         </ul>
                     </div>
+                    <aura:if isTrue="{!!empty(v.selection)}">
                     <lightning:buttonIcon iconName="utility:close"  size="x-small" alternativeText="Close" onclick="{!c.onClearSelection}" class="close-btn"/>
+                    </aura:if>
                 </div>
             </aura:if>
 
