--- a/force-app/main/default/aura/ReferHealthcareProvider/ReferHealthcareProvider.cmp
+++ b/force-app/main/default/aura/ReferHealthcareProvider/ReferHealthcareProvider.cmp
@@ -4,15 +4,19 @@
 
 <aura:component description="ReferHealthcareProvider">
     <aura:attribute name="pe" type="Object"/>
-    <!--<aura:attribute name="healthCareProviders" type="List"/>-->
+    <aura:attribute name="healthCareProviders" type="List"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+
+    <aura:method name="disconnectHCP" action="{!c.doDisconnetc}">
+        <aura:attribute name="index" type="Integer"/>
+    </aura:method>
     <!--<aura:handler name="change" value="{!v.pe.healthCareProviders}" action="{!c.doLog}"/>-->
 
     <div class="slds-grid slds-wrap healthcare-container">
         <div class="slds-grid slds-wrap slds-size--1-of-1">
             <div class="slds-col slds-size--3-of-4">
-                <div class="header">Healthcare Provider</div>
+                <div class="header">{!$Label.c.HealthCare_Provider}</div>
                 <div class="healthcare-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem Ipsum has been the
                     industry's standard dummy
@@ -20,14 +24,16 @@
             </div>
             <div class="slds-col slds-size--1-of-4 referring-provider-header">
                 <aura:if isTrue="{!v.pe.HCP_Contact_HCPEnroll__r.Name}">
-                    <div class="rp-label">REFERRING PROVIDER</div>
+                    <div class="rp-label">{!$Label.c.HealthCare_Provider_RP}</div>
                     <div class="healthcare-info">{!v.pe.HCP_Contact_HCPEnroll__r.Name}</div>
                 </aura:if>
             </div>
         </div>
         <div class="slds-grid slds-wrap slds-size--1-of-1">
-            {!v.body}
+            <aura:iteration items="{!v.healthCareProviders}" var="hcProvider" indexVar="index">
+                <c:ReferHealthcareProviderForm healthCareProvider = "{!hcProvider}" index = "{!index}" parent="{!this}"/>
+            </aura:iteration>
         </div>
-        <button class="apollo-btn secondary" onclick="{!c.doAddProvider}">Add Another Provider</button>
+        <button class="apollo-btn secondary" onclick="{!c.doAddProvider}">{!$Label.c.Add_Another_Provider}</button>
     </div>
 </aura:component>
