--- a/force-app/main/default/aura/ReferHealthcareProviderForm/ReferHealthcareProviderForm.cmp
+++ b/force-app/main/default/aura/ReferHealthcareProviderForm/ReferHealthcareProviderForm.cmp
@@ -4,19 +4,42 @@
 
 <aura:component description="ReferHealthcareProviderForm">
     <aura:attribute name="healthCareProvider" type="Object"/>
+    <aura:attribute name="index" type="Integer"/>
+    <aura:attribute name="parent" type="Aura.Component"/>
+    <aura:attribute name="providerFound" type="Boolean" default="false"/>
 
     <div class="slds-grid slds-wrap slds-size--1-of-1 slds-grid_vertical-align-end healthcare-form-container">
-        <div class="slds-col slds-size--4-of-12">
-            <lightning:input class="healthcare-input" type="email" label="Provider's email address" value="{!v.healthCareProvider.Email}" onchange="{!c.checkFieldsds}"/>
+        <c:RRSpinner aura:id="spinner" fixed="true" size="medium"/>
+        <div class="slds-col slds-size--1-of-1 slds-large-size--4-of-12">
+            <lightning:input class="healthcare-input" type="text"
+                             label="{!$Label.c.HealthCare_Providers_Email}" value="{!v.healthCareProvider.Email}"
+                             onchange="{!c.checkFieldsds}" onblur="{!c.checkContact}"
+                             disabled="{!v.healthCareProvider.Id}"/>
         </div>
-        <div class="slds-col slds-size--3-of-12">
-            <lightning:input class="healthcare-input" type="text" label="Provider's first name" value="{!v.healthCareProvider.First_Name}" onchange="{!c.checkFieldsds}"/>
+        <div class="slds-col slds-size--1-of-1 slds-large-size--3-of-12">
+            <lightning:input class="healthcare-input" type="text"
+                             label="{!$Label.c.HealthCare_Providers_First_Name}"
+                             value="{!v.healthCareProvider.First_Name}" onchange="{!c.checkFieldsds}"
+                             disabled="{!v.healthCareProvider.Id}"/>
         </div>
-        <div class="slds-col slds-size--3-of-12">
-            <lightning:input class="healthcare-input" type="text" label="Provider's last name" value="{!v.healthCareProvider.LastName}" onchange="{!c.checkFieldsds}"/>
+        <div class="slds-col slds-size--1-of-1 slds-large-size--3-of-12">
+            <lightning:input class="healthcare-input" type="text"
+                             label="{!$Label.c.HealthCare_Providers_Last_Name}" value="{!v.healthCareProvider.LastName}"
+                             onchange="{!c.checkFieldsds}" disabled="{!v.healthCareProvider.Id}"/>
         </div>
-        <div class="slds-col slds-size--2-of-12">
-            <button class="apollo-btn tertiary" style="padding:3% 10%;height:32px;"  onclick="{!c.doConnect}">Connect to patient</button>
+        <div class="slds-col slds-size--3-of-12 slds-large-size--2-of-12" style="margin-top:1%">
+            <button class="apollo-btn tertiary " style="padding:0;height:40px;min-width:160px"
+                    onclick="{!v.healthCareProvider.Id ? c.doDisconnect : c.doConnect}">{!v.healthCareProvider.Id ? $Label.c.HealthCare_Provider_Disconnect : $Label.c.HealthCare_Provider_Connect}</button>
         </div>
+        <aura:if isTrue="{!v.providerFound}">
+            <div class="slds-grid slds-wrap slds-size--7-of-12 slds-large-size--1-of-1 slds-grid_vertical-align-end healthcare-form-container provider-found-section">
+                <div class="slds-col slds-size--4-of-12 slds-large-size--4-of-12">
+                    {!$Label.c.HealthCare_Provider_Found}
+                </div>
+                <div class="slds-col slds-size--8-of-12 slds-large-size--4-of-12">
+                    <c:RRLink label="{!$Label.c.Different_HealthCare_Provider}" page="{!'help'}"/>
+                </div>
+            </div>
+        </aura:if>
     </div>
 </aura:component>
