--- a/force-app/main/default/layouts/CaseClose-Close Case Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/CaseClose-Close Case Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>Study_Code__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Study__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>OneColumn</style>
     </layoutSections>
