--- a/force-app/main/default/aura/TrialItem/TrialItem.cmp
+++ b/force-app/main/default/aura/TrialItem/TrialItem.cmp
@@ -5,6 +5,7 @@
 
     <aura:attribute name="trialTDO" type="Object"/>
     <aura:attribute name="isClicked" type="Boolean"/>
+    <aura:attribute name="isSecondClicked" type="Boolean"/>
     <aura:attribute name="isInit" type="Boolean"/>
     <aura:attribute name="participant" type="Participant__c" access="public"/>
     <aura:attribute name="formData" type="Object" access="public"/>
@@ -42,21 +43,19 @@
         <div class="cpt-official-title ctp-padding">
             {!v.trialTDO.ctp.Official_Title__c}
         </div>
-
-        <aura:if isTrue="{!v.trialTDO.isEnrollingCTP}">
-            <button class="{!'apollo-btn ' + (v.isClicked ? 'tertiary' : 'primary' ) +' button-ctp'}"
-                    onclick="{!c.onClick}" disabled="{!v.isClicked}">
-                {!v.isClicked ? $Label.c.TrialSearch_Study_contacted : $Label.c.TrialSearch_Contact_the_study}
+        <aura:if isTrue="{!!or(v.isClicked, v.trialTDO.relatedNotificationExists)}">
+            <button class="apollo-btn primary button-ctp" onclick="{!c.onClick}">
+                {!v.trialTDO.isEnrollingCTP ? $Label.c.TrialSearch_Contact_the_study : $Label.c.TrialSearch_Alert_me_when_enrollment_starts}
             </button>
             <aura:set attribute="else">
-                <button class="{!'apollo-btn ' + (or(v.isClicked, v.trialTDO.relatedNotificationExists) ? 'tertiary' : 'primary') +' button-ctp'}"
-                        onclick="{!c.onClick}" disabled="{!or(v.isClicked, v.trialTDO.relatedNotificationExists)}">
-                    {!or(v.isClicked, v.trialTDO.relatedNotificationExists) ? $Label.c.TrialSearch_We_will_alert_you : $Label.c.TrialSearch_Alert_me_when_enrollment_starts}
+                <button class="apollo-btn tertiary button-ctp"
+                        onclick="{!c.onClick}" disabled="{!v.trialTDO.relatedNotificationExists}">
+                    {!v.trialTDO.relatedNotificationExists ? $Label.c.TrialSearch_We_will_alert_you : $Label.c.TrialSearch_Study_contacted}
                 </button>
             </aura:set>
         </aura:if>
 
-        <aura:if isTrue="{!and(v.isInit)}">
+        <aura:if isTrue="{!v.isInit}">
             <c:Popup aura:id="contactModal" title="{!'Contact ' + v.trialTDO.ctp.Study_Code_Name__c}" size="large">
                 <c:FormPatientInfoTrialSearch aura:id="contactForm"
                         participant="{!v.participant}"
