--- a/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.cmp
+++ b/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.cmp
@@ -21,14 +21,16 @@
     <aura:attribute name="statusSteps" type="List" access="public"/>
     <aura:attribute name="anchor" type="String"/>
     <aura:attribute name="modifiedSteps" type="List"/>
+    <aura:attribute name="refreshForm" type="Boolean" default="false"/>
     <aura:attribute name="refreshSteps" type="Boolean" default="false"/>
+    <aura:attribute name="actions" type="Object"/>
 
-    <!-- methods -->    <aura:attribute name="refreshForm" type="Boolean" default="false"/>
-
+    <!-- methods -->
     <aura:method name="execute" action="{!c.doExecute}" access="public">
         <aura:attribute name="pe" type="Participant_Enrollment__c"/>
         <aura:attribute name="pathItems" type="List"/>
         <aura:attribute name="anchorScroll" type="String"/>
+        <aura:attribute name="actions" type="Object"/>
         <aura:attribute name="rootComponent" type="Aura.Component" access="public"/>
         <aura:attribute name="callback" type="Function"/>
     </aura:method>
@@ -59,8 +61,8 @@
                     </div>
                 </div>
                 <aura:if isTrue="{!v.pe}">
-                    <div>
-                        <c.ReferHealthcareProvider pe="{!v.pe}"/>
+                    <div id="healthCareProvider">
+                        <c.ReferHealthcareProvider pe="{!v.pe}" action="{!v.actions.screenerResponses}"/>
                     </div>
                 </aura:if>
                 <!--Status Detail Path-->
@@ -83,7 +85,7 @@
                 </div>
 
                 <!--MRR Survey Results-->
-                <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c}">
+                <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c &amp;&amp; !v.actions.screenerResponses.disabled}">
                     <div id="screenerResponsesAnchor" class="header">{!$Label.c.BTN_Screener_Responses}</div>
                     <c:SurveyGismoResultsView results="{!v.pe.MRR_Survey_Results_URL__c}"/>
                 </aura:if>
