--- a/force-app/main/default/aura/PSECard/PSECard.cmp
+++ b/force-app/main/default/aura/PSECard/PSECard.cmp
@@ -11,13 +11,14 @@
     <aura:attribute name="parent" type="Aura.Component"/>
     <aura:attribute name="peStatusesPathList" type="List"/>
     <aura:attribute name="peStatusStateMap" type="Map"/>
+    <aura:attribute name="actions" type="List"/>
 
     <!-- component body:-->
     <div class="rr-white-panel padding" style="position: relative">
         <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}" isReferral="false"/>
         <c:ParticipantCardFields userMode="{!v.userMode}" pe="{!v.pe}"/>
         <c:PSEPath steps="{!v.steps}" pe="{!v.pe}" userMode="{!v.userMode}" parent="{!v.parent}" peStatusesPathList="{!v.peStatusesPathList}"
-                   peStatusStateMap="{!v.peStatusStateMap}"/>
+                   peStatusStateMap="{!v.peStatusStateMap}" actions="{!v.actions}"/>
     </div>
 
 </aura:component>
