--- a/force-app/main/default/aura/PSEPath/PSEPath.cmp
+++ b/force-app/main/default/aura/PSEPath/PSEPath.cmp
@@ -14,6 +14,7 @@
     <aura:attribute name="peStatusesPathList" type="List"/>
     <aura:attribute name="peStatusStateMap" type="Map"/>
     <aura:attribute name="enrollmentPathItems" type="List"/>
+    <aura:attribute name="actions" type="List"/>
 
     <!-- handler: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -23,7 +24,7 @@
     <!-- component body: -->
     <div>
         <div class="path-panel">
-            <div class="path-section">
+            <div class="{!v.userMode != 'PI' ? 'path-section' : 'path-section-pi'}">
                 <c:RRPath2 pathItems="{!v.pathItems}"/>
             </div>
             <aura:if isTrue="{!v.userMode != 'PI'}">
@@ -36,7 +37,7 @@
         </div>
         <aura:if isTrue="{!v.userMode == 'PI'}">
             <div class="slds-grid vpi-status-btns slds-gutters_x-small slds-wrap">
-                <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
+                <div class="{!v.pe.MRR_Survey_Results_URL__c &amp;&amp; !v.actions.screenerResponses.disabled ? 'slds-col slds-size_1-of-1 slds-small-size_3-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_4-of-12'}">
                     <button class="{!'apollo-btn tertiary'}"
                             title="{!$Label.c.BTN_Participant_Information}"
                             onclick="{!c.showEditParticipantInformation}"
@@ -44,7 +45,15 @@
                         {!$Label.c.BTN_Participant_Information}
                     </button>
                 </div>
-                <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
+                <div class="{!v.pe.MRR_Survey_Results_URL__c &amp;&amp; !v.actions.screenerResponses.disabled ? 'slds-col slds-size_1-of-1 slds-small-size_3-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_4-of-12'}">
+                    <button class="{!'apollo-btn tertiary'}"
+                            title="{!$Label.c.BTN_HealthCare_Providers}"
+                            onclick="{!c.showEditParticipantInformation}"
+                            value="healthCareProvider">
+                        {!$Label.c.BTN_HealthCare_Providers}
+                    </button>
+                </div>
+                <div class="{!v.pe.MRR_Survey_Results_URL__c &amp;&amp; !v.actions.screenerResponses.disabled ? 'slds-col slds-size_1-of-1 slds-small-size_3-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_4-of-12'}">
                     <button class="{!'apollo-btn tertiary'}"
                             title="{!$Label.c.BTN_Status_Details}"
                             onclick="{!c.showEditParticipantInformation}"
@@ -52,8 +61,8 @@
                         {!$Label.c.BTN_Status_Details}
                     </button>
                 </div>
-                <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c}">
-                    <div class="slds-col slds-size_1-of-1 slds-small-size_4-of-12">
+                <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c &amp;&amp; !v.actions.screenerResponses.disabled}">
+                    <div class="slds-col slds-size_1-of-1 slds-small-size_3-of-12">
                         <button class="{!'apollo-btn tertiary'}"
                                 title="{!$Label.c.BTN_Screener_Responses}"
                                 onclick="{!c.showEditParticipantInformation}"
@@ -64,7 +73,6 @@
                 </aura:if>
             </div>
         </aura:if>
-
     </div>
 
 </aura:component>
