--- a/force-app/main/default/aura/PSEPath/PSEPath.css
+++ b/force-app/main/default/aura/PSEPath/PSEPath.css
@@ -15,6 +15,10 @@
     padding-bottom: 10px;
 }
 
+.THIS .path-panel .path-section-pi {
+    padding-bottom: 10px;
+}
+
 .THIS .path-panel .collapse-section{
     padding: 10px;
     font-size: 14px;
