--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.css
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.css
@@ -155,6 +155,10 @@
     padding-bottom: 10px;
 }
 
+.THIS .vpi-path-panel .path-section-pi {
+    padding-bottom: 10px;
+}
+
 .THIS .vpi-path-panel .collapse-section{
     padding: 10px;
     font-size: 14px;
