--- a/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
@@ -216,6 +216,10 @@
                 <behavior>Edit</behavior>
                 <field>Visit_Plan__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Link_to_ePR_Campaign__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -602,7 +606,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h6E000000gRy0</masterLabel>
+        <masterLabel>00h1x000000PhNq</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
