--- a/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
+++ b/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
@@ -6,7 +6,7 @@
                 controller="IconPlanetVisitInfoEditRemote">
 
     <!--ATTRIBUTES-->
-    <aura:attribute name="ctpId" type="String" description="Id of the Clinical Trial Profile" default="" required="true"/>
+    <aura:attribute name="planId" type="String"/>
     <aura:attribute name="iconDetails" type="Object[]"/>
     <aura:attribute name="IconsPackageName" default="Icons_legend" type="String"/>
     <aura:attribute name="IconsPackageFIlePath" default="/icons.svg" type="String"/>
@@ -19,8 +19,10 @@
     <lightning:notificationsLibrary aura:id="notifLib"/>
 
 
-  <!--  <aura:method name="save" action="{!c.saveLegend}"/>
-    <aura:method name="close" action="{!c.closeLegend}"/>-->
+    <aura:method name="save" action="{!c.saveIconsLegend}">
+        <aura:attribute name="callback" type="Function"/>
+    </aura:method>
+<!--    <aura:method name="close" action="{!c.closeLegend}"/>-->
     <!--SPINNER-->
     <lightning:spinner class="slds-hide" aura:Id="spinner" size="medium"/>
     <!--SPINNER-->
@@ -32,7 +34,7 @@
             </div>
 
             <aura:set attribute="else">
-                <aura:if isTrue="{!empty(v.iconDetails)==false}">
+                <aura:if isTrue="{!not(empty(v.iconDetails))}">
                     <c:RRTable>
                         <tr>
                             <th class="slds-text-align--center">Icon</th>
