--- a/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
+++ b/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
@@ -11,6 +11,7 @@
     <aura:attribute name="icons" type="List" access="public"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.value}" action="{!c.doInit}"/>
 
     <div class="icons">
         <aura:iteration items="{!v.icons}" var="icon">
