--- a/force-app/main/default/aura/VisitItem/VisitItem.cmp
+++ b/force-app/main/default/aura/VisitItem/VisitItem.cmp
@@ -5,17 +5,21 @@
 <aura:component description="VisitItem">
 
     <aura:attribute name="visit" type="Object"/>
-    <aura:attribute name="parent" type="Aura.Component"/>
+
+    <aura:attribute name="rowColor" type="String" default="white"/>
+    <aura:attribute name="selectedRowColor" type="String" default="white"/>
+    <aura:attribute name="currentRowColor" type="String" default="white" access="private"/>
+
 
     <aura:registerEvent name="onEdit" type="c:uiEvent"/>
     <aura:registerEvent name="onDelete" type="c:uiEvent"/>
 
-    <tr class="slds-hint-parent">
+    <tr class="slds-hint-parent" onmouseover="{!c.doMouseEnter}" onmouseout="{!c.doMouseLeave}">
         <td>
             <a href="javascript:void(0);" onclick="{!c.navToRecord}" class=" slds-text-link">{!v.visit.Name}</a>
         </td>
         <td>
-            <div class="slds-text-title slds-text-color_default">{!v.visit.Patient_Portal_Name__c}</div>
+            <div class=" slds-text-title slds-text-color_default">{!v.visit.Patient_Portal_Name__c}</div>
         </td>
         <td>
             <div class="slds-text-title slds-text-color_default">{!v.visit.Visit_Number__c}</div>
@@ -24,7 +28,7 @@
             <div class="slds-text-title slds-text-color_default">{!v.visit.Visit_Schedule__c}</div>
         </td>
         <td>
-            <c:RRIconSplitter value="{!v.visit.Icons__c}"/>
+            <c:RRIconSplitter value="{!v.visit.Icons__c}" backgroundColor="{!v.currentRowColor}"/>
         </td>
         <td>
             <lightning:buttonIcon onclick="{!c.editMode}" iconName="utility:edit"/>
