--- a/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
+++ b/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
@@ -19,6 +19,7 @@
     <aura:attribute name="todayDate" type="Date" access="private"/>
     <aura:attribute name="statesLVList" type="LabelValueItem[]" access="private"/>
     <aura:attribute name="dataStamp" type="String"/>
+    <aura:attribute name="visitPlanDisabled" type="Boolean"/>
 
 
     <!-- methods: -->
@@ -160,8 +161,8 @@
                             <abbr title="required" class="slds-required">*</abbr>
                         </aura:if>Visit Plan TODO
                     </div>
-                    <c:rrSelect options="{!v.formData.visitPlansLVList}"
-                                value="{!v.pe.Visit_Plan__c}" placeholder="{!$Label.c.PG_AC_Select}" required="true"
+                    <c:rrSelect options="{!v.formData.visitPlansLVList}" disabled="{!v.visitPlanDisabled}"
+                                value="{!v.pe.Visit_Plan__c}" placeholder="{!$Label.c.PG_AC_Select}" required="{!v.screeningRequired}"
                                 useSentenceFont="false" onchange="{!c.doCheckFields}"/>
                 </div>
 
